[package]
name = "guessing-game"
version = "0.1.0"
edition = "2021"
description = "A guessing game project written in Rust."
authors = ["Mohammad Zain Abbas <mohammadzainabbas@gmail.com>"]
homepage = "https://github.com/mohammadzainabbas/rust-from-dust/tree/main/guessing-game"
repository = "https://github.com/mohammadzainabbas/rust-from-dust/tree/main/guessing-game"
keywords = ["rust", "rust-axum", "backend", "axum", "web-application"]
categories = ["command-line-utilities"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
rand = "0.8.5"
