[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"
description = "A hello world project written in Rust!"
authors = ["Mohammad Zain Abbas <mohammadzainabbas@gmail.com>"]
homepage = "https://github.com/mohammadzainabbas/rust-from-dust/tree/main/hello-world"
repository = "https://github.com/mohammadzainabbas/rust-from-dust/tree/main/hello-world"
keywords = ["rust", "hello-world"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
