[package]
name = "rust-axum-intro"
version = "0.1.0"
edition = "2021"
description = "A Rust backend project based on Axum web framework."
authors = ["Mohammad Zain Abbas <mohammadzainabbas@gmail.com>"]
homepage = "https://github.com/mohammadzainabbas/rust-from-dust/tree/main/rust-axum-intro"
repository = "https://github.com/mohammadzainabbas/rust-from-dust/tree/main/rust-axum-intro"
keywords = ["rust", "rust-axum", "backend", "axum", "web-application"]
categories = ["command-line-utilities"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Tokio runtime
tokio = { version = "1.35.1", features = ["full"] }

# CLI
clap = { version = "4.4.18", features = ["derive"] }

# Type erasure for async trait methods
async-trait = "0.1.77"

# A generic serialization/deserialization framework
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
serde_with = "3.4.0"
axum = "0.7.4"

[dev-dependencies]
# Flexible concrete Error type built on std::error::Error
anyhow = "1.0.79"

# Minimalistic HTTP Client Test Utilities
httpc-test = "0.1.8"
